# cardano_live_blockchainViewer

./: DEPLOYMENT_GUIDE.md  DOCKER_FREE_DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml
cardano_blockchain_viewer/: .dockerignore  .env  Cargo.toml  Dockerfile  daemon.toml
cardano_blockchain_viewer/src/: config.rs  main.rs
cardano_blockchain_viewer/src/api/: auth.rs  mod.rs  user.rs
cardano_blockchain_viewer/src/auth/: jwt.rs  middleware.rs  mod.rs
cardano_blockchain_viewer/src/blockfrost/: mod.rs
cardano_blockchain_viewer/src/models/: events.rs  mod.rs  stats.rs
cardano_blockchain_viewer/src/services/: event_processor.rs  mod.rs  oura_reader.rs
cardano_blockchain_viewer/src/websocket/: axum_handler.rs  handler.rs  mod.rs
cardano_blockchain_viewer_frontend/: .dockerignore  AUTHENTICATION_FLOW.md  Dockerfile  WALLET_AUTH_README.md  next.config.ts  package-lock.json  package.json
cardano_blockchain_viewer_frontend/app/: globals.css  layout.tsx  page.tsx
cardano_blockchain_viewer_frontend/components/: block-explorer.tsx  connection-status.tsx  copy-button.tsx  dashboard.tsx  footer.tsx  header.tsx  search.tsx  user-transaction-history.tsx  wallet-connect.tsx
cardano_blockchain_viewer_frontend/lib/: address-utils.ts  api.ts  auth-context.tsx  cardano-wallet.ts  wallet-context.ts
