[package]
name = "cardano_blockchain_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

jsonwebtoken = "9.3"
sha2 = "0.10"
hex = "0.4" 
reqwest = { version = "0.12", features = ["json"] }

chrono = { version = "0.4", features = ["serde"] }

rand = "0.8"

cardano-serialization-lib = "11.5"
ed25519-dalek = "2.1"